WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197793
[iOS] HTMLMediaElement sometimes doesn't send 'webkitplaybacktargetavailabilitychanged' event
https://bugs.webkit.org/show_bug.cgi?id=197793
Summary
[iOS] HTMLMediaElement sometimes doesn't send 'webkitplaybacktargetavailabili...
Eric Carlson
Reported
2019-05-10 12:59:42 PDT
HTMLMediaElement doesn't always send 'webkitplaybacktargetavailabilitychanged' event.
Attachments
Patch
(3.62 KB, patch)
2019-05-10 13:29 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(4.32 KB, patch)
2019-05-10 15:10 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(1.44 KB, patch)
2019-05-13 08:50 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-05-10 13:00:24 PDT
<
rdar://problem/46429187
>
Eric Carlson
Comment 2
2019-05-10 13:29:39 PDT
Created
attachment 369592
[details]
Patch
Eric Carlson
Comment 3
2019-05-10 15:10:59 PDT
Created
attachment 369605
[details]
Patch
WebKit Commit Bot
Comment 4
2019-05-10 16:30:02 PDT
Comment on
attachment 369605
[details]
Patch Clearing flags on attachment: 369605 Committed
r245199
: <
https://trac.webkit.org/changeset/245199
>
WebKit Commit Bot
Comment 5
2019-05-10 16:30:04 PDT
All reviewed patches have been landed. Closing bug.
Eric Carlson
Comment 6
2019-05-13 08:50:08 PDT
Reopening to attach new patch.
Eric Carlson
Comment 7
2019-05-13 08:50:09 PDT
Created
attachment 369734
[details]
Patch
WebKit Commit Bot
Comment 8
2019-05-13 09:30:14 PDT
Comment on
attachment 369734
[details]
Patch Clearing flags on attachment: 369734 Committed
r245236
: <
https://trac.webkit.org/changeset/245236
>
WebKit Commit Bot
Comment 9
2019-05-13 09:30:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug