[iOS] HTMLMediaElement sometimes doesn't send 'webkitplaybacktargetavailabilitychanged' event https://bugs.webkit.org/show_bug.cgi?id=197793 <rdar://problem/46429187>

Reviewed by Jer Noble.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::MediaElementSession): Initialize m_hasPlaybackTargets.

* platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::externalOutputDeviceAvailableDidChange): Log
target availability.
(-[WebMediaSessionHelper startMonitoringAirPlayRoutes]): Call the client
externalOutputDeviceAvailableDidChange method after the AVRouteDetector is available.


Canonical link: https://commits.webkit.org/211937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245199 268f45cc-cd09-0410-ab3c-d52691b4dbfc